[package]
name = "eolina-rs"
version = "0.1.0"
description = """\
A cli interface for Eolina, an esotheric string manipulation language.

There may be minor differences in the parsing or interpretation of the
original and my implementation. This application does not adhere to
SemVer."""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

atty = "0.2"
clap = { version = "3.0.0-rc.7", features = ["derive"] }
color-eyre = "0.5"
crossterm = "0.22"
fern = "0.6"
log = "0.4"
nom = "7.1"
thiserror = "1.0"
